# adichtmat2hdf5

./: .gitignore  .python-version  README.md  adichmat_export_comments.py  adichtmat.py  adichtmat2hdf5.code-workspace  adichtmat_export_blocks.py  adichtmat_export_blocks_by_tok.py  adichtmat_export_blocks_by_tok2.py  adichtmat_export_blocks_by_tok_batch.py  adichtmat_export_comments.py  adichtmat_export_comments_NIBP.py  adichtmat_export_test_by_token_old.py  adichtmat_new_to_integrate.py  adichtmat_old.py  adichtmat_saveto_hdf5.py  adichtmat_tohdf5.py  adichtmat_tohdf5_batch.py  config.py  main.py  pyproject.toml  readme.md  requirements.txt  test_adichtmat.py  test_adichtmat_export_int16.py  test_hdf5storage.py  test_xtokens.py  xtokens.py
conf/: conf.yaml  xtokens copy.json  xtokens.json  xtokens_autodet.json  xtokens_copy.json  xtokens_ns.json  xtokens_vagalmilan.json
