[project]
name = "adichtmat2hdf5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "hdf5storage>=0.2.1",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pyside6>=6.9.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.16.2",
]
